--- a/e.html
+++ b/e.html
@@ -57,7 +57,7 @@ body {
     height: 75%;
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
 		url("Main_page.png");
-    background-size: 0, cover;
+    background-size: cover;
     transform-style: preserve-3d;
     transition: all 2.6s;
     animation: rotateAnimation 5.2s infinite alternate;
