--- a/e.html
+++ b/e.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <script>
+function openWin(){
+
+myWindow=window.open(“”,””,”width=100,height=100″);
+
+}
+
 const audioContext = new (window.AudioContext || window.webkitAudioContext)();
 
 navigator.mediaDevices
