--- a/e.html
+++ b/e.html
@@ -36,6 +36,17 @@ navigator.mediaDevices
 </script> 
 <style>
 
+fog {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url(fog.gif);
+      background-repeat: repeat;
+      z-index: 9999;
+    }
+
 body {
     height: 90vh;
     margin:0;
@@ -119,6 +130,7 @@ body {
 </style>
 </head>
 <body>
+<div id="fog"></div>
 <div class="thumb">
 	  <a href="#"></a>
 </div>
