--- a/e.html
+++ b/e.html
@@ -37,7 +37,7 @@ navigator.mediaDevices
 <style>
 
  .fog {
-    background-image: url("fog.gif");
+    background-image: url("https://gitknu.github.io/l/e/fog.gif");
     background-position: center bottom, left top;
     -webkit-background-size: 100wv 5vh, cover;
     -moz-background-size: 100wv 5vh, cover;
