--- a/e.html
+++ b/e.html
@@ -39,12 +39,12 @@ navigator.mediaDevices
  .fog {
     background-image: url("https://gitknu.github.io/l/fog.gif");
     background-position: center bottom, left top;
-    -webkit-background-size: 100wv 5vh, cover;
-    -moz-background-size: 100wv 5vh, cover;
-    -o-background-size: 100wv 5vh, cover;
-    background-size: 100wv 5vh, cover;
+    -webkit-background-size: 100wv 3vh, cover;
+    -moz-background-size: 100wv 3vh, cover;
+    -o-background-size: 100wv 3vh, cover;
+    background-size: 100wv 3vh, cover;
     background-repeat: repeat-x, no-repeat;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     }
 
