--- a/e.html
+++ b/e.html
@@ -46,6 +46,8 @@ navigator.mediaDevices
     background-repeat: repeat-x, no-repeat;
     width: 100vw;
     height: 100vh;
+    opacity: 0.5;
+    z-index: 999999;
     }
 
 body {
