--- a/e.html
+++ b/e.html
@@ -44,6 +44,11 @@ navigator.mediaDevices
     -o-background-size: 100wv 1vh, cover;
     background-size: 100wv 1vh, cover;
     background-repeat: repeat-x, no-repeat;
+   -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
     width: 100vw;
     height: 100vh;
     }
