--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Сканер 📱</title>
-     <link rel="icon" href="https://gitknu.github.io/b/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="https://gitknu.github.io/l/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
