--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <a-entity mindar-image-target="targetIndex: 0">
 <a-gltf-model src="music" rotation="0 0 0" position="0.1 0.1 0" scale="0.52 0.52 0.52" animation-mixer> <!--yes-->
       </a-entity>
+      <a-entity mindar-image-target="targetIndex: 1">
+<a-gltf-model src="music" rotation="0 0 0" position="0.1 0.1 0" scale="0.52 0.52 0.52" animation-mixer> <!--yes-->
+      </a-entity>
     </a-scene>
   </body>
 </html>
