--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <a-scene mindar-image="imageTargetSrc: https://gitknu.github.io/l/ukr.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <a-asset-item id="music" src="https://gitknu.github.io/l/player.glb"></a-asset-item>
+            <img id="cat" src="https://gitknu.github.io/b/circle_cat_transp.png" />
         <a-asset-item id="text"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-<a-gltf-model src="music" rotation="0 0 0" position="0 0 0" scale="5.52 5.52 5.52" animation-mixer> <!--yes-->
+<a-plane src="#cat" position="0.25 -0.35 0" height="1.101" width="1.101" rotation="0 0 0" transparent="true"></a-plane> <!--yes-->
       </a-entity>
       <a-entity mindar-image-target="targetIndex: 1">
 <a-gltf-model src="music" rotation="0 0 0" position="0 0 0" scale="5.52 5.52 5.52" animation-mixer> <!--yes-->
