--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <a-scene mindar-image="imageTargetSrc: https://gitknu.github.io/l/ukr.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-<a-asset-item id="music" src="https://gitknu.github.io/l/player_2.glb"></a-asset-item>
+<a-asset-item id="music" src="https://gitknu.github.io/l/old_table.glb"></a-asset-item>
         <a-asset-item id="text"></a-asset-item>
       </a-assets>
 
