--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </div>
   <body>
 
-    <a-scene mindar-image="imageTargetSrc: https://gitknu.github.io/l/ukr.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: https://gitknu.github.io/l/ukr20s.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
+<img id="nothing" src="https://gitknu.github.io/l/nothing.png" />
 <a-asset-item id="music" src="https://gitknu.github.io/l/player.glb"></a-asset-item>
         <a-asset-item id="text"></a-asset-item>
       </a-assets>
@@ -25,6 +26,9 @@
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
 <a-gltf-model src="music" rotation="0 0 0" position="0 0 0" scale="0.5 0.5 0.5" animation-mixer> 
+      </a-entity>
+      <a-entity mindar-image-target="targetIndex: 1">
+<a-plane src="#nothing" position="0 0 0" height="0.1" width="0.1" rotation="0 0 0" transparent="true"></a-plane>
       </a-entity>
     </a-scene>
   </body>
