--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Сканер 📱</title>
-     <link rel="icon" href="https://gitknu.github.io/l/favicon.ico" type="image/x-icon">
+     <link rel="icon" href="https://gitknu.github.io/b/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
@@ -12,7 +12,7 @@
   </head>
 
  <div style="position: fixed; top: 10px; width: 100%; text-align: right; z-index: 99999; color: grey">
-        <button class="btn btn-success" onclick="window.open('https://google.com','_blank')">Натисніть</button>,⠀<br>для<br>реєстрації<br>на захід
+        <button class="btn btn-success" onclick="window.open('https://x.com/DefenceU/status/1511675504428044288','_blank')">Натисніть</button>,⠀<br>після<br>перегляду<br>брошури
     </div>
   <body>
 
@@ -23,12 +23,18 @@
         <a-asset-item id="text"></a-asset-item>
       </a-assets>
 
+ <a-assets>
+            <img id="banksy_fight" src="https://gitknu.github.io/b/banksy_fight.png" />
+        <a-asset-item id="piven" src="https://gitknu.github.io/b/b.glb"></a-asset-item>
+        <a-asset-item id="text"></a-asset-item>
+      </a-assets>
+
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-<a-gltf-model src="music" rotation="0 0 0" position="0 0 0.9" scale="0.5 0.5 0.5" animation-mixer> 
+<a-plane src="#banksy_girl" position="0.06 0.105 0" height="0.475" width="0.475" rotation="0 0 0" transparent="true"></a-plane> <!--yes-->
       </a-entity>
-      <a-entity mindar-image-target="targetIndex: 1">
-<a-plane src="#nothing" position="0 0 0" height="0.9" width="0.9" rotation="0 0 0" transparent="true"></a-plane>
+<a-entity mindar-image-target="targetIndex: 1">
+<a-gltf-model src="#piven" rotation="0 180 0" position="-0.23 0.35 0" scale="0.02 0.02 0.02" animation-mixer> <!--yes-->
       </a-entity>
     </a-scene>
   </body>
