--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a-scene mindar-image="imageTargetSrc: https://gitknu.github.io/l/ukr20s.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
  <a-assets>
             <img id="banksy_fight" src="https://gitknu.github.io/b/banksy_fight.png" />
-        <a-asset-item id="piven" src="https://gitknu.github.io/b/b.glb"></a-asset-item>
+        <a-asset-item id="piven" src="https://gitknu.github.io/l/player.glb"></a-asset-item>
         <a-asset-item id="text"></a-asset-item>
       </a-assets>
 
