--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a-scene mindar-image="imageTargetSrc: https://gitknu.github.io/l/ukr20s.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
  <a-assets>
             <img id="banksy_fight" src="https://gitknu.github.io/b/banksy_fight.png" />
-        <a-asset-item id="piven" src="https://gitknu.github.io/l/player.glb"></a-asset-item>
+        <a-asset-item id="music" src="https://gitknu.github.io/l/player.glb"></a-asset-item>
         <a-asset-item id="text"></a-asset-item>
       </a-assets>
 
@@ -28,7 +28,7 @@
 <a-plane src="#banksy_girl" position="0 0 0" height="0.475" width="0.475" rotation="0 0 0" transparent="true"></a-plane> <!--yes-->
       </a-entity>
 <a-entity mindar-image-target="targetIndex: 1">
-<a-gltf-model src="#piven" rotation="0 180 0" position="-0.3 0.1 0" scale="0.02 0.02 0.02" animation-mixer> <!--yes-->
+<a-gltf-model src="#music" rotation="0 180 0" position="-0.3 0.1 0" scale="0.02 0.02 0.02" animation-mixer> <!--yes-->
       </a-entity>
     </a-scene>
   </body>
