--- a/e.html
+++ b/e.html
@@ -175,6 +175,11 @@ body {
     color: #ffdb80;
 }
 
+.resp_img {
+  width: 100%;
+  height: auto;
+}
+
 </style>
 </head>
 <body>
@@ -186,7 +191,7 @@ body {
 
 <!-- Add the button element -->
 <div class="button">
-    <span><img src="poster.png"></span>
+    <span><img src="poster.png" class="resp_img"></span>
 </div>
 
 </body>
