--- a/e.html
+++ b/e.html
@@ -163,7 +163,7 @@ body {
 }
 
 .button:hover::before {
-    content: "СКАНУЙТЕ QR-КОД ЗЛІВА, А ЗА ПОСИЛАННЯМ УСЮ ВЕБ-СТОРІНКУ";
+    content: "СКАНУЙТЕ QR-КОД ЗЛІВА, ДАЛІ (ЗА ПОСИЛАННЯМ) ПОСТЕР СПРАВА, ВІДВЕДІТЬ КАМЕРУ НА ВЕСЬ ЕКРАН";
     text-align: right;
     text-shadow: 1px 1px 2px black;
     position: absolute;
