--- a/e.html
+++ b/e.html
@@ -163,15 +163,15 @@ body {
 }
 
 .button:hover::before {
-    content: "СКАНУЙТЕ QR (ЗЛІВА), ВІДКРИЙТЕ ПОСИЛАННЯ, СКАНУЙТЕ ПОСТЕР (СПРАВА), ВІДВЕДІТЬ КАМЕРУ НА ВЕСЬ ЕКРАН";
+    content: "СКАНУЙТЕ QR, ВІДКРИВАЙТЕ ПОСИЛАННЯ, СКАНУЙТЕ АГІТПЛАКАТ, ВІДВЕДІТЬ СМАРТФОН";
     text-align: right;
     text-shadow: 1px 1px 2px black;
     position: absolute;
-    top: 25%;
+    top: 30%;
     right: 2vw;
     transform: translateY(-50%);
     font-family: 'Caveat', arial, serif;
-    font-size: 5vh;
+    font-size: 6.5vh;
     color: #ffdb80;
 }
 
