--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
  <div style="position: fixed; top: 10px; width: 100%; text-align: right; z-index: 99999; color: grey">
-        <button class="btn btn-success" onclick="window.open('https://x.com/DefenceU/status/1511675504428044288','_blank')">Реєстрація</button>,⠀<br>на захід
+        <button class="btn btn-success" onclick="window.open('https://x.com/DefenceU/status/1511675504428044288','_blank')">Зареєструватися<br>на захід</button>,⠀<br>на захід
     </div>
   <body>
 
