--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
  <div style="position: fixed; top: 10px; width: 100%; text-align: right; z-index: 99999; color: grey">
-        <button class="btn btn-success" onclick="window.open('https://google.com','_blank')" style="opacity: 0.3;">Реєстрація<br>на захід 🕺💃</button>
+        <button class="btn btn-success" onclick="window.open('https://google.com','_blank')" style="opacity: 0.3; border-radius: 8px;">Реєстрація<br>на захід 🕺💃</button>
     </div>
   <body>
 
