--- a/e.html
+++ b/e.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+   <title>1920-і</title>
+   <link rel="icon" href="https://gitknu.github.io/HMB/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
   <link href="https://fonts.googleapis.com/css?family=Caveat&v1" rel="stylesheet">
 <script>
